--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -23,7 +23,7 @@
   <juku-form-row>
     <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="BR"></juku-tunnusluvut-lipputulot>
   </juku-form-row>
-  <juku-form-row>
+  <juku-form-row  ng-if="false">
     <juku-tunnusluvut-tarjouskilpailut tyyppi="BR"></juku-tunnusluvut-tarjouskilpailut>
   </juku-form-row>
   <juku-form-row>
