--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" focus-to-invalid>
   <div class="page-header">
     <h1>Tunnuslukujen syöttäminen</h1>
   </div>
@@ -55,7 +55,7 @@
       <div ui-view></div>
       <juku-controls>
         <juku-controls-buttons>
-          <button class="btn btn-success" data-ng-click="tallennaHakemus()">Tallenna näytöllä olevat tiedot</button>
+          <button class="btn btn-success" data-ng-click="tallennaTunnusluvut()">Tallenna näytöllä olevat tiedot</button>
         </juku-controls-buttons>
       </juku-controls>
     </div>
