--- a/app/scripts/components/tunnusluvut/lipputulot/index.html
+++ b/app/scripts/components/tunnusluvut/lipputulot/index.html
@@ -9,7 +9,7 @@
             <th ng-if="tyyppi==='BR' || tyyppi==='KOS'" class="col-md-3">Kertalippu<br>(€/kk ilman ALV)</th>
             <th ng-if="tyyppi==='BR' || tyyppi==='KOS'" class="col-md-3">Arvolippu<br>(€/kk ilman ALV)</th>
             <th ng-if="tyyppi==='BR' || tyyppi==='KOS'" class="col-md-3">Kausilippu<br>(€/kk ilman ALV)</th>
-            <th ng-if="tyyppi==='SL'" class="col-md-3">Lipputulo<br>(€/kk ilman ALV)</th>
+            <th ng-if="tyyppi==='SA'" class="col-md-3">Lipputulo<br>(€/kk ilman ALV)</th>
           </tr>
         </thead>
         <tfoot ng-if="lipputulo.length > 0">
@@ -20,7 +20,7 @@
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">{{kertalipputuloSumma() | currency : '€/vuosi' : 2}}</td>
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">{{arvolipputuloSumma() | currency : '€/vuosi' : 2}}</td>
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">{{kausilipputuloSumma() | currency : '€/vuosi' : 2}}</td>
-            <td ng-if="tyyppi==='SL'">{{lipputuloSumma() | currency : '€/vuosi' : 2}}</td>
+            <td ng-if="tyyppi==='SA'">{{lipputuloSumma() | currency : '€/vuosi' : 2}}</td>
           </tr>
           <tr ng-if="tyyppi==='BR' || tyyppi==='KOS'" class="total">
             <td colspan="">
@@ -33,37 +33,37 @@
           <tr ng-repeat="rivi in lipputulo track by $index" ng-form>
             <td>{{kuukausiNimi(rivi.kuukausi)}}</td>
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">
-              <form-group-compact label="Kertalippu">
+              <form-group-compact label="Kertalippu" errormessage="lipputuloErrorMessage">
                 <input id="{{tyyppi + '-kertalippu-'+$index}}" name="kertalippu" type="text"
-                       numeric-only="" ng-currency=""
-                       currency-symbol="€" noenter
+                       numeric-only="" ng-currency="" max="9999999999.99"
+                       currency-symbol="€" noenter placeholder="Kertalippu (€)"
                        select-on-click
                        ng-model="rivi.kertalipputulo">
               </form-group-compact>
             </td>
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">
-              <form-group-compact label="Arvolippu">
+              <form-group-compact label="Arvolippu" errormessage="lipputuloErrorMessage">
                 <input id="{{tyyppi + '-arvolippu-'+$index}}" name="arvolippu" type="text"
-                       numeric-only="" ng-currency=""
-                       currency-symbol="€" noenter
+                       numeric-only="" ng-currency="" max="9999999999.99"
+                       currency-symbol="€" noenter placeholder="Arvolippu (€)"
                        select-on-click
                        ng-model="rivi.arvolipputulo">
               </form-group-compact>
             </td>
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">
-              <form-group-compact label="Kausilippu">
+              <form-group-compact label="Kausilippu" errormessage="lipputuloErrorMessage">
                 <input id="{{tyyppi + '-kausilippu-'+$index}}" name="kausilippu" type="text"
-                       numeric-only="" ng-currency=""
-                       currency-symbol="€" noenter
+                       numeric-only="" ng-currency="" max="9999999999.99"
+                       currency-symbol="€" noenter placeholder="Kausilippu (€)"
                        select-on-click
                        ng-model="rivi.kausilipputulo">
               </form-group-compact>
             </td>
-            <td ng-if="tyyppi==='SL'">
-              <form-group-compact label="Lipputulo">
+            <td ng-if="tyyppi==='SA'">
+              <form-group-compact label="Lipputulo" errormessage="lipputuloErrorMessage">
                 <input id="{{tyyppi + '-lipputulo-sl'+$index}}" name="lipputulo" type="text"
-                       numeric-only="" ng-currency=""
-                       currency-symbol="€" noenter
+                       numeric-only="" ng-currency="" max="9999999999.99"
+                       currency-symbol="€" noenter placeholder="Lipputulo (€)"
                        select-on-click
                        ng-model="rivi.lipputulo">
               </form-group-compact>
