LIVIJUKU-704: numeric-only direktiivin parantaminen

--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -133,7 +133,7 @@
           <td>
             <form-group-compact label="Ajokilometrit" errormessage="ajokilometritErrorMessage">
               <input id="{{liikennetyyppi + '-ajokilometrit'}}" name="ajokilometrit" type="text" class="form-control"
-                     numeric-km-only="" ng-currency=""
+                     numeric-only="" ng-currency=""
                      ng-readonly="isReadonly()" required
                      currency-symbol="km" placeholder="Ajokilometrit" noenter
                      select-on-click
