--- a/app/scripts/components/seuranta/lippu/index.html
+++ b/app/scripts/components/seuranta/lippu/index.html
@@ -86,7 +86,7 @@
           <td>
             <form-group-compact label="Keskipituus" errormessage="keskipituusErrorMessage">
               <input id="{{(kaupunkilippu ? 'kaupunki' : 'seutu') + '-keskipituus'}}" name="keskipituus" type="text"
-                     class="form-control" numeric-km-only="" ng-currency=""
+                     class="form-control" numeric-only="" ng-currency=""
                      currency-symbol="km"
                      noenter
                      select-on-click
