--- a/app/scripts/components/tunnusluvut/liikenteenKysyntaTarjonta/index.html
+++ b/app/scripts/components/tunnusluvut/liikenteenKysyntaTarjonta/index.html
@@ -30,7 +30,7 @@
               <form-group-compact label="Linjakilometrit" errormessage="linjakilometritErrorMessage">
                 <input id="{{tyyppi + '-linjakilometrit-talvi-'+$index}}" name="linjakilometrit"
                        placeholder="km / päivä" type="text"
-                       numeric-km-only ng-currency="" max="9999999999.99" currency-symbol=""
+                       numeric-only ng-currency="" max="9999999999.99" currency-symbol=""
                        noenter select-on-click
                        ng-model="tunnuslukutalvi.linjakilometrit">
               </form-group-compact>
@@ -88,7 +88,7 @@
               <form-group-compact label="Linjakilometrit" errormessage="linjakilometritErrorMessage">
                 <input id="{{tyyppi + '-linjakilometrit-'+$index}}" name="linjakilometrit" type="text"
                        placeholder="km / kuukausi"
-                       numeric-km-only ng-currency="" max="9999999999.99" currency-symbol=""
+                       numeric-only ng-currency="" max="9999999999.99" currency-symbol=""
                        noenter select-on-click
                        ng-model="tunnusluku.linjakilometrit">
               </form-group-compact>
