--- a/app/scripts/components/ely/kehittamishankkeet/index.styl
+++ b/app/scripts/components/ely/kehittamishankkeet/index.styl
@@ -5,5 +5,7 @@
       font-weight: bold
   .yhteensa
     float: right
-  .ekarivi
-    //background-color: ghostwhite
+
+.kehittamishankkeet-controls
+  margin-bottom: 20px
+
