--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -38,4 +38,5 @@
 @import '../scripts/components/seuranta/liikenne'
 @import '../scripts/components/tunnusluvut'
 @import '../scripts/components/ely/kehittamishankkeet'
+@import '../scripts/components/ely/maararahatarpeet'
 @import '../scripts/components/taydennysdialogi'
