--- a/app/scripts/components/tunnusluvut/liikennointikorvaukset/index.html
+++ b/app/scripts/components/tunnusluvut/liikennointikorvaukset/index.html
@@ -44,7 +44,7 @@
               </form-group-compact>
             </td>
             <td ng-if="tyyppi==='ME'">
-              <form-group-compact label="Nousua / kk" errormessage="korvausErrorMessage">
+              <form-group-compact label="Nousua / kk" errormessage="nousutErrorMessage">
                 <input id="{{tyyppi + '-nousut-'+$index}}" name="nousut" type="text"
                        integer-only maxlength="9"
                        placeholder="Nousua / kk"
