--- a/app/scripts/components/tunnusluvut/lisatiedot/index.html
+++ b/app/scripts/components/tunnusluvut/lisatiedot/index.html
@@ -6,6 +6,6 @@
     <label for="lisatiedot">Kirjoita tähän tarvittaessa tarkennuksia ja vapaita kommentteja liittyen yllä oleviin
       tietoihin.</label>
       <textarea id="lisatiedot" name="lisatiedot" rows="4" class="animate msd-elastic: \n;"
-                ng-model="lisatiedot" ng-readonly="isReadonly()"></textarea>
+                ng-model="lisatiedot" ng-readonly="isReadonly()" maxlength="5000"></textarea>
   </juku-form-row>
 </ng-form>
