--- a/app/scripts/components/ely/kehittamishankkeet/index.html
+++ b/app/scripts/components/ely/kehittamishankkeet/index.html
@@ -3,15 +3,10 @@
         <table class="table table-hover table-condensed">
           <thead>
             <tr>
-              <th class="col-md-4 ekarivi" uib-tooltip="Kehittämishankkeiden (jatkuvat/uudet) erittely hankkeittain"
-                  tooltip-placement="top" tooltip-append-to-body="true">Kehittämishankkeen (jatkuvat/uudet) nimi
-              </th>
-              <th class="col-md-2 ekarivi">Arvo</th>
-              <th class="col-md-5 ekarivi"
-                  uib-tooltip="Kehittämishankkeen ajanjakso (vuodet eli onko hanke jatkuva vai uusi), lyhyt perustelu hankkeelle"
-                  tooltip-placement="top" tooltip-append-to-body="true">Kuvaus
-              </th>
-              <th class="col-md-1 ekarivi" ng-hide="isReadonly() || kehittamishankkeet.length === 0">Toiminnot</th>
+              <th class="col-md-4">Kehittämishankkeen (jatkuvat/uudet) nimi</th>
+              <th class="col-md-2">ELY:n osuus</th>
+              <th class="col-md-5">Kuvaus hankkeesta, hankkeen kesto ja muut rahoittajat</th>
+              <th class="col-md-1" ng-hide="isReadonly() || kehittamishankkeet.length === 0">Toiminnot</th>
             </tr>
           </thead>
           <tfoot ng-if="kehittamishankkeet.length > 0">
@@ -39,7 +34,7 @@
                 </form-group-compact>
               </td>
               <td>
-                <form-group-compact label="Arvo" errormessage="arvoalueErrorMessage">
+                <form-group-compact label="ELYn osuus" errormessage="arvoalueErrorMessage">
                   <input id="{{'arvo-'+$index}}" name="arvo" type="text"
                          class="form-control" ng-currency="" numeric-only=""
                          noenter
