LIVIJUKU-693: Automaattiset testit tunnuslukujen syöttösivuille.

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -1,4 +1,4 @@
-<div class="header navbar navbar-fixed-top" role="navigation">
+<div id="navheader" class="header navbar navbar-fixed-top" role="navigation">
   <div class="container">
     <a ui-sref="redirect()">
       <img src="images/juku_logo.svg" class="logo"/>
